2004-08-08  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c: Include "floatformat.h".
	(n32n64_floatformat_always_valid): New function.
	(floatformat_n32n64_long_double_big): New constant.
	(mips_gdbarch_init): Set size and format of long double
	for N32 and N64 ABIs.
	* Makefile.in (mips-tdep.o): Update dependencies.

2004-08-08  Andrew Cagney  <cagney@gnu.org>

	* gdbarch.sh: Delete "fmt" and "attrib" fields.  Always use %s to
	print.  Improve script's error messages.
	* gdbarch.h: Re-generate.

	* gdbarch.sh (pformat): New function.
	(float_format, double_format, long_double_format): List with bit
	members.  Use pformat when printing.
	* gdbarch.c, gdbarch.h: Re-generate.
	
2004-08-08  Nathan J. Williams  <nathanw@wasabisystems.com>

	* ppcnbsd-nat.c: Include <machine/frame.h>, <machine/pcb.h>,
	"gdbcore.h", "regcache.h", and "bsd-kvm.h".
	(ppcnbsd_supply_pcb): New function.
	(_initialize_ppcnbsd_nat): New prototype and function.
	* config/powerpc/nbsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* Makefile.in (ppcnbsd-nat.o): Update dependencies.

2004-08-08  Andrew Cagney  <cagney@gnu.org>

	* gdbtypes.c (builtin_type_arm_ext, builtin_type_ieee_single)
	(builtin_type_ieee_double, builtin_type_ia64_quad)
	(builtin_type_ia64_spill, _initialize_gdbtypes): Add tables of
	BE/LE floating-point types.
	* gdbtypes.h (builtin_type_arm_ext, builtin_type_ieee_single)
	(builtin_type_ieee_double, builtin_type_ia64_quad)
	(builtin_type_ia64_spill): Declare.
	* doublest.c (_initialize_doublest, floatformat_ieee_single)
	(floatformat_ieee_double, floatformat_arm_ext)
	(floatformat_ia64_spill, floatformat_ia64_quad): Add tables
	of LE/BE floatformats.	
	* doublest.h: (struct floatformat, floatformat_ieee_single)
	(floatformat_ieee_double, floatformat_arm_ext)
	(floatformat_ia64_spill, floatformat_ia64_quad): Declare.

2004-08-08  Mark Kettenis  <kettenis@gnu.org>

	* i386gnu-nat.c (gnu_store_registers): Fix typo.
